Add integration tests

--- a/server/src/common/emails/finAnnee.mjml.ejs
+++ b/server/src/common/emails/finAnnee.mjml.ejs
@@ -43,7 +43,7 @@
                            padding="25px 25px 0 25px"
                            border-radius="50px" font-family="Helvetica"
                            line-height="23px"
-                           href="<%= utils.getPublicUrl(`/questionnaire?token=${data.token }`) %>" >
+                           href="<%= utils.getPublicUrl(`/questionnaires?token=${data.token }`) %>" >
                     Je donne mon avis en 1 minute
                 </mj-button>
 
