Update email finAnnee header

--- a/server/src/common/emails/finAnnee.mjml.ejs
+++ b/server/src/common/emails/finAnnee.mjml.ejs
@@ -18,7 +18,7 @@
 
     <mj-body background-color="#e5e5e5">
 
-        <mj-section background-color="#f3f6f7">
+        <mj-section background-url="/header-email.png" padding-bottom="45px">
             <mj-column width="60%" padding-right="0">
                 <mj-image align="left" width="42px" src="/logo.png"/>
                 <mj-text align="left" padding="25px 0 25px 25px" font-size="36px" font-weight="900" line-height="33px"
@@ -26,7 +26,6 @@
                 </mj-text>
             </mj-column>
             <mj-column width="40%" vertical-align="bottom" padding-left="0">
-                <mj-image align="right" height="150px" src="/avatar.png"/>
             </mj-column>
         </mj-section>
 
@@ -94,9 +93,9 @@
             </mj-column>
         </mj-section>
 
-        <mj-section background-color="#000000" padding-bottom="0">
+        <mj-section background-color="#5222d0" padding-bottom="0">
             <mj-column padding-top="0">
-                <mj-text align="left" font-size="14px" line-height="23px">
+                <mj-text align="left" font-size="14px" line-height="20px">
                     Cet email a été envoyé à <%= data.email %>
                     <br/>
                     Vous avez reçu cet email parce que votre CFA nous a transmis votre email.
@@ -107,9 +106,9 @@
             </mj-column>
         </mj-section>
 
-        <mj-section background-color="#000000" padding-top="0">
+        <mj-section background-color="#5222d0" padding-top="0">
             <mj-column>
-                <mj-text align="center" color="#ffffff" font-size="14px" line-height="23px">
+                <mj-text align="center" color="#ffffff" font-size="14px" line-height="20px">
                     <a href="#" class="link-nostyle">Voir cet email dans votre navigateur XXXX</a>
                 </mj-text>
                 <mj-image align="center" width="76px" src="/marianne.png"/>
