Add br in finAnnee email template

--- a/server/src/common/emails/finAnnee.mjml.ejs
+++ b/server/src/common/emails/finAnnee.mjml.ejs
@@ -51,7 +51,9 @@
                 </mj-text>
 
                 <mj-text align="center" font-weight="600" padding="25px">
-                    Aidez les prochains à faire les bons choix Dites leur tout sur l’apprentissage
+                    Aidez les prochains à faire les bons choix
+                    <br>
+                    Dites leur tout sur l’apprentissage
                 </mj-text>
 
                 <mj-text align="center" padding="25px">
