--- a/server/src/common/emails/finAnnee.mjml.ejs
+++ b/server/src/common/emails/finAnnee.mjml.ejs
@@ -33,7 +33,7 @@
             <mj-column>
                 <mj-text align="center" padding-top="50px" color="#ffffff">Bonjour <%= data.prenom %>,</mj-text>
                 <mj-text align="center" padding="10px 25px" color="#ffffff">
-                    Vous suivez le formation de
+                    Vous suivez la formation de
                     <strong><%= data.formation.intitule %></strong>
                 </mj-text>
 
@@ -53,7 +53,7 @@
                 <mj-text align="center" font-weight="600" padding="25px">
                     Aidez les prochains à faire les bons choix
                     <br>
-                    Dites leur tout sur l’apprentissage
+                    Dites-leur tout sur l’apprentissage
                 </mj-text>
 
                 <mj-text align="center" padding="25px">
@@ -73,14 +73,17 @@
         <mj-section background-color="#5222d0" padding-top="0">
             <mj-column padding-top="0">
                 <mj-text align="left" font-size="12px" line-height="20px">
+                    Sirius est un service développé par la Mission Intermnistérielle qui vise à faciliter les entrées en apprentissage. 
+                    Vous trouverez toutes les informations sur : https://app.gitbook.com/@mission-apprentissage/s/general/les-nouveaux-services/anotea-apprentissage
+                    
                     Sirius traite vos données à caractère personnel (données professionnelles, données de contact) pour
                     les besoins de la réalisation d’une enquête de satisfaction. Cette enquête est facultative. Sirius a
                     obtenu vos données directement par votre CFA. 
                 </mj-text>
                 <mj-text align="left" font-size="12px" line-height="20px">
                     Vos données seront conservées pendant la durée de
-                    l’enquête, pour les apprentis n’ayant pas consenti à être contacté, ou jusqu’à la révocation du
-                    consentement et au maximum 3 ans pour les stagiaires ayant consentis à être contactés. 
+                    l’enquête, ou jusqu’à la révocation du
+                    consentement et au maximum 3 ans pour les apprentis ayant répondu au questionnaire. 
                 </mj-text>
                 <mj-text align="left" font-size="12px" line-height="20px">
                     Conformément aux articles 12 à 23 du règlement général (UE) sur la protection des données n°2016/679
@@ -88,9 +91,7 @@
                     2016 et à la loi Informatique et libertés n°78-17 du 6 janvier 1978 modifiée, vous bénéficiez
                     notamment d’un droit d’accès, de rectification, d’effacement et le droit de porter une réclamation
                     devant la Commission nationale de l’informatique et des libertés pour les données vous concernant.
-                    Pour exercer vos droits, vous pouvez vous adresser à votre agence ou au délégué à la protection des
-                    données de Pôle emploi (1 avenue du Docteur Gley, 75987 Paris cedex 20 ;
-                    courriers-cnil@pole-emploi.fr).
+                    Pour exercer vos droits, vous pouvez vous adresser à sirius@apprentissage.beta.gouv.fr.
                 </mj-text>
             </mj-column>
         </mj-section>
