Add import contrat feature

--- a/server/src/questionnaires/emails/finAnnee.mjml.ejs
+++ b/server/src/questionnaires/emails/finAnnee.mjml.ejs
@@ -31,10 +31,12 @@
 
         <mj-section padding-bottom="20px" padding-top="10px" background-color="#5222d0">
             <mj-column>
-                <mj-text align="center" padding-top="50px" color="#ffffff">Bonjour <%= data.apprenti.prenom %>,</mj-text>
+                <mj-text align="center" padding-top="50px" color="#ffffff">Bonjour <%= data.contrat.apprenti.prenom %>
+                    ,
+                </mj-text>
                 <mj-text align="center" padding="10px 25px" color="#ffffff">
                     Vous suivez la formation de
-                    <strong><%= data.apprenti.formation.intitule %></strong>
+                    <strong><%= data.contrat.formation.intitule %></strong>
                 </mj-text>
 
                 <mj-button background-color="#ec615b" align="center"
@@ -42,7 +44,7 @@
                            padding="25px 25px 0 25px"
                            border-radius="50px" font-family="Helvetica"
                            line-height="23px"
-                           href="<%= utils.getPublicUrl(`/questionnaire?token=${data.token }`) %>" >
+                           href="<%= utils.getPublicUrl(`/questionnaires/${data.token}`) %>">
                     Je donne mon avis en 1 minute
                 </mj-button>
 
@@ -73,9 +75,12 @@
         <mj-section background-color="#5222d0" padding-top="0">
             <mj-column padding-top="0">
                 <mj-text align="left" font-size="12px" line-height="20px">
-                    Sirius est un service développé par la Mission Intermnistérielle qui vise à faciliter les entrées en apprentissage.
-                    Vous trouverez toutes les informations sur : https://app.gitbook.com/@mission-apprentissage/s/general/les-nouveaux-services/anotea-apprentissage
-
+                    Sirius est un service développé par la Mission Intermnistérielle qui vise à faciliter les entrées en
+                    apprentissage.
+                    Vous trouverez toutes les informations <a
+                            href="https://app.gitbook.com/@mission-apprentissage/s/general/les-nouveaux-services/anotea-apprentissage"
+                            class="link-nostyle">ici</a>.
+                    <br>
                     Sirius traite vos données à caractère personnel (données professionnelles, données de contact) pour
                     les besoins de la réalisation d’une enquête de satisfaction. Cette enquête est facultative. Sirius a
                     obtenu vos données directement par votre CFA. 
@@ -99,12 +104,13 @@
         <mj-section background-color="#5222d0" padding-bottom="0">
             <mj-column padding-top="0">
                 <mj-text align="left" font-size="14px" line-height="20px">
-                    Cet email a été envoyé à <%= data.apprenti.email %>
+                    Cet email a été envoyé à <%= data.contrat.apprenti.email %>
                     <br/>
                     Vous avez reçu cet email parce que votre CFA nous a transmis votre email.
                     <br/>
-                    Pour vous déinscrire,
-                    <a href="<%= utils.getPublicUrl(`/unsubscribe?token=${data.token }`) %>" class="link-nostyle">cliquez ici</a>
+                    Pour vous désinscrire,
+                    <a href="<%= utils.getPublicUrl(`/unsubscribe?token=${data.token}`) %>" class="link-nostyle">cliquez
+                        ici</a>
                 </mj-text>
             </mj-column>
         </mj-section>
@@ -112,7 +118,8 @@
         <mj-section background-color="#5222d0" padding-top="0">
             <mj-column>
                 <mj-text align="center" color="#ffffff" font-size="14px" line-height="20px">
-                    <a href="#" class="link-nostyle">Voir cet email dans votre navigateur XXXX</a>
+                    <a href="<%= utils.getPublicUrl(`/questionnaires/${data.token}/email`) %>" class="link-nostyle">Voir
+                        cet email dans votre navigateur</a>
                 </mj-text>
                 <mj-image align="center" width="76px" src="<%= utils.getPublicUrl(`/images/marianne.png`) %>"/>
             </mj-column>
