--- a/server/src/questionnaires/emails/finAnnee.mjml.ejs
+++ b/server/src/questionnaires/emails/finAnnee.mjml.ejs
@@ -109,7 +109,7 @@
                     Vous avez reçu cet email parce que votre CFA nous a transmis votre email.
                     <br/>
                     Pour vous désinscrire,
-                    <a href="<%= utils.getPublicUrl(`/unsubscribe?token=${data.token}`) %>" class="link-nostyle">cliquez
+                    <a href="<%= utils.getPublicUrl(`/api/contrats/${data.contrat._id}/unsubscribe`) %>" class="link-nostyle">cliquez
                         ici</a>
                 </mj-text>
             </mj-column>
