--- a/server/src/questionnaires/emails/finAnnee.mjml.ejs
+++ b/server/src/questionnaires/emails/finAnnee.mjml.ejs
@@ -20,7 +20,7 @@
 
         <mj-section background-url="<%= utils.getPublicUrl(`/images/header-email.png`) %>" padding-bottom="45px">
             <mj-column width="60%" padding-right="0">
-                <mj-image align="left" width="42px" src="<%= utils.getPublicUrl(`/images/logo.png`) %>"/>
+                <mj-image align="left" width="42px" alt="Logo de Sirius" src="<%= utils.getPublicUrl(`/images/logo.png`) %>"/>
                 <mj-text align="left" padding="25px 0 25px 25px" font-size="36px" font-weight="900" line-height="33px"
                          color="#5222D0">Aidez les futurs apprentis à choisir leur formation
                 </mj-text>
@@ -60,7 +60,8 @@
 
                 <mj-text align="center" padding="25px">
                     Votre avis sera publié sur
-                    <img width="100px" src="<%= utils.getPublicUrl(`/images/logo-lba.png`) %>"/>
+                    <img width="100px" alt="Logo de La Bonne Alternance"
+                         src="<%= utils.getPublicUrl(`/images/logo-lba.png`) %>"/>
                 </mj-text>
 
             </mj-column>
@@ -109,7 +110,8 @@
                     Vous avez reçu cet email parce que votre CFA nous a transmis votre email.
                     <br/>
                     Pour vous désinscrire,
-                    <a href="<%= utils.getPublicUrl(`/api/contrats/${data.contrat._id}/unsubscribe`) %>" class="link-nostyle">cliquez
+                    <a href="<%= utils.getPublicUrl(`/api/contrats/${data.contrat._id}/unsubscribe`) %>"
+                       class="link-nostyle">cliquez
                         ici</a>
                 </mj-text>
             </mj-column>
@@ -121,7 +123,8 @@
                     <a href="<%= utils.getPublicUrl(`/questionnaires/${data.token}/email`) %>" class="link-nostyle">Voir
                         cet email dans votre navigateur</a>
                 </mj-text>
-                <mj-image align="center" width="76px" src="<%= utils.getPublicUrl(`/images/marianne.png`) %>"/>
+                <mj-image align="center" width="76px" alt="Logo République Française Marianne"
+                          src="<%= utils.getPublicUrl(`/images/marianne.png`) %>"/>
             </mj-column>
         </mj-section>
 
