--- a/server/src/questionnaires/emails/finAnnee.mjml.ejs
+++ b/server/src/questionnaires/emails/finAnnee.mjml.ejs
@@ -18,10 +18,10 @@
 
     <mj-body background-color="#e5e5e5">
 
-        <mj-section background-url="<%= utils.getPublicUrl(`/images/header-email.png`) %>" padding-bottom="45px">
+        <mj-section background-url="<%= utils.getPublicUrl(`/images/header-email.png`) %>" padding-bottom="50px">
             <mj-column width="60%" padding-right="0">
                 <mj-image align="left" width="42px" alt="Logo de Sirius" src="<%= utils.getPublicUrl(`/images/logo.png`) %>"/>
-                <mj-text align="left" padding="25px 0 25px 25px" font-size="36px" font-weight="900" line-height="33px"
+                <mj-text align="left" padding="10px 0 25px 25px" font-size="34px" font-weight="900" line-height="33px"
                          color="#5222D0">Aidez les futurs apprentis à choisir leur formation
                 </mj-text>
             </mj-column>
@@ -45,7 +45,7 @@
                            border-radius="50px" font-family="Helvetica"
                            line-height="23px"
                            href="<%= utils.getPublicUrl(`/questionnaires/${data.token}`) %>">
-                    Je donne mon avis en 1 minute
+                    Donnez votre avis en 3 minutes
                 </mj-button>
 
                 <mj-text align="center" font-style="italic" font-size="14px">
