--- a/server/src/questionnaires/emails/finFormation.mjml.ejs
+++ b/server/src/questionnaires/emails/finFormation.mjml.ejs
@@ -117,7 +117,7 @@
                     Vous avez reçu cet email parce que votre CFA nous a transmis votre email.
                     <br/>
                     Pour vous désinscrire,
-                    <a href="<%= utils.getPublicUrl(`/api/apprentis/${data.contrat._id}/unsubscribe`) %>"
+                    <a href="<%= utils.getPublicUrl(`/api/apprentis/${data.apprenti._id}/unsubscribe`) %>"
                        class="link-nostyle">cliquez
                         ici</a>
                 </mj-text>
